# cpp-simd

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md
src/: simd.hpp  simd_128.hpp
test/: simd.cpp
